# Langchain-chat

./: .env.example  .gitignore  README.md  config..yaml  pyproject.toml  test_preset.py
config/: logging.yaml  presets.yaml
docs/: Step1-项目初始化教学文档.md  Step2-数据模型与TUI骨架教学文档.md  Step3-SQLite存储后端教学文档.md  Step4-用户管理教学文档.md  Step5-预设管理教学文档.md  Step6-对话引擎教学文档.md  Step7-对话视图教学文档.md  Step8-会话管理完善教学文档.md  Step9-对话搜索教学文档.md  uv 配置国内镜像源（加速 uv add）.md  uv包管理器教学文档.md  实施步骤计划.md  需求变更与扩展登记.md
scripts/: _init_.py  init_db.py
src/: main.py
src/core/: _ini_.py  config_manager.py  preset_manager.py  user_manager.py
src/interface/: _init_.py  ui_protocol.py
src/models/: _init_.py  schemas.py
src/storage/: _init_.py  base.py  factory.py  sqlite_backend.py
src/ui/: _init_.py
src/ui/tui/: _init_.py  app.py  chat_view.py  menu_view.py  widgets.py
