[project]
name = "langchain-chat"
version = "0.1.0"
description = "基于LangChain的多轮会话系统"
readme =" README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.uv]
package =false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

testpaths = ["tests"]