[project]
name = "langchain-chat"
version = "0.1.0"
description = "基于LangChain的多轮会话系统"
readme =" README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[tool.uv]
package =false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

testpaths = ["tests"]
